--- a/notebooks/3.0-fp-PrivacyUtility.ipynb
+++ b/notebooks/3.0-fp-PrivacyUtility.ipynb
@@ -2,27 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "5e64c3db-b5f1-423b-8915-38952886cfd2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import os\n",
-    "from sqlalchemy import types, create_engine\n",
-    "import cx_Oracle\n",
-    "# import diffprivlib as dp\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "from IPython.display import display\n",
+    "from IPython.display import display, HTML\n",
     "from ipywidgets import Layout, interact, IntSlider, widgets\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 6,
    "id": "1e5fdb9a-77d3-4905-b9d1-cc40542659a1",
    "metadata": {},
    "outputs": [],
@@ -47,16 +43,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "9725daf2-7181-443f-b6e9-9b243c284a6b",
-   "metadata": {},
-   "source": [
-    "## Metrics functions"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "760ce315-7187-45b4-9ce7-9888bfc61bce",
    "metadata": {},
    "outputs": [],
@@ -108,220 +96,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "0d12c88f-19a9-4207-8de7-d23868362445",
-   "metadata": {},
-   "source": [
-    "# Record supression"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "f80b8324-38ef-4865-a093-0ccd4cd01d47",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fd7aa57999c4fcc9f042040e34fd160",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntSlider(value=1, description='k value:', layout=Layout(width='400px'), max=5, min=1)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6d438ea47c6429fb71407af7f9d6795",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b1ea4c66d6b403a8e321b4af8c597af",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "k = widgets.IntSlider(value=1, min=1, max=5, description='k value:',layout=Layout(width='400px'))\n",
-    "\n",
-    "def f_supression(k):\n",
-    "    QID = ['Age (QID)', 'Gender (QID)'] # define quasi-identifyer groups\n",
-    "\n",
-    "    orig_length = len(df)\n",
-    "    new_length = len(df.groupby(QID).filter(lambda x: len(x)>=k))\n",
-    "    print(\"%d%% of data supressed\" %(np.round(((orig_length - new_length) / orig_length)* 100)))\n",
-    "\n",
-    "def f_supression_data(k):\n",
-    "    dfs = df.copy()\n",
-    "    QID = ['Age (QID)', 'Gender (QID)']\n",
-    "    index = dfs.groupby(QID).filter(lambda x: len(x)<k).index\n",
-    "    dfs.iloc[index] = '----------'\n",
-    "    display(dfs)\n",
-    "\n",
-    "out1 = widgets.interactive_output(f_supression, {'k': k})\n",
-    "out2 = widgets.interactive_output(f_supression_data, {'k': k})\n",
-    "\n",
-    "display(k)\n",
-    "display(out1)\n",
-    "display(out2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ed0bf57d-e123-44f2-a6e4-60c10a8a73c8",
-   "metadata": {},
-   "source": [
-    "# Combined"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "9ebd82da-bb48-4311-a0c7-9f3464ee1655",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2a17133847e4e5e82a47a3c08f645f1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntSlider(value=1, description='Step size:', layout=Layout(width='400px'), max=40, min=1)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f8cb228aec844c18c5ca41cfa8385a0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1528fb874d8746848fea8e27a536fc75",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ec294dc946974f4abd45148016d290bf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "step_size = widgets.IntSlider(value=1, min=1, max=40, description='Step size:',layout=Layout(width='400px'))\n",
-    "\n",
-    "def label_age(step_size):\n",
-    "    print('Ages changed to %d year steps' %(step_size))\n",
-    "\n",
-    "def f_ranging(step_size):\n",
-    "    dfs = df.copy()\n",
-    "    dfs['ranged'] = np.floor((dfs['Age (QID)']/step_size))*step_size\n",
-    "    dfs['ranged'] = dfs['ranged'].astype(int)\n",
-    "    dfs['Age (QID)'] = dfs['ranged'].astype(str) + '-' + (dfs['ranged']+step_size).astype(str)\n",
-    "    dfs = dfs.drop(columns=['ranged'])\n",
-    "    display(dfs)\n",
-    "\n",
-    "\n",
-    "def f_ranging_k(step_size):\n",
-    "    dfs = df.copy()\n",
-    "    dfs['ranged'] = np.floor((dfs['Age (QID)']/step_size))*step_size\n",
-    "    dfs['ranged'] = dfs['ranged'].astype(int)\n",
-    "    gil = GIL(max(dfs['ranged'] + step_size) , min(dfs['ranged']), max(dfs['Age (QID)']), min(dfs['Age (QID)']))\n",
-    "    dfs['Age (QID)'] = dfs['ranged'].astype(str) + '-' + (dfs['ranged']+step_size).astype(str)\n",
-    "    qid = ['Age (QID)', 'Gender (QID)'] # define quasi-identifyer groups\n",
-    "    quid_groupsize = dfs.groupby(qid).size()\n",
-    "    k_val = quid_groupsize[quid_groupsize > 0].min()\n",
-    "    print('k-annonymity has a value of k = %d' %k_val)\n",
-    "    print(\"Generalised information loss = %.3f\" %gil)\n",
-    "    \n",
-    "\n",
-    "out1 = widgets.interactive_output(label_age, {'step_size': step_size})\n",
-    "out2 = widgets.interactive_output(f_ranging_k, {'step_size': step_size})\n",
-    "out3 = widgets.interactive_output(f_ranging, {'step_size': step_size})\n",
-    "\n",
-    "display(step_size)\n",
-    "display(out1)\n",
-    "display(out2)\n",
-    "display(out3)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "872316da-81ab-4618-aa3d-36087372d59a",
-   "metadata": {},
-   "source": [
-    "# Combined"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 8,
    "id": "98fe2cdb-78d1-4c60-8b10-9d493c6bd3dd",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set minimum privacy value with k-annonymity:\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76910f26d9b24187869b2c98a1eb405b",
+       "model_id": "21ab041ce55a422cb2a87e963419ff0e",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "IntSlider(value=1, description='k value:', layout=Layout(width='400px'), max=5, min=1)"
+       "IntSlider(value=1, layout=Layout(width='400px'), max=5, min=1)"
       ]
      },
      "metadata": {},
@@ -330,7 +125,44 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf751d72995343f0a44c502806986cd2",
+       "model_id": "384e44eb61ad479ebe4b54fc08fe6930",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "Set age generalisation step size\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a7025e8ab5bf47c68e4f0d1ce3245a6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=1, layout=Layout(width='400px'), max=40, min=1)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f48394bb5ecc4d2190d453f4ad1ef298",
        "version_major": 2,
        "version_minor": 0
       },
@@ -352,43 +184,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbde39dd77eb4e5b9b7b90c646f87659",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "IntSlider(value=1, description='Step size:', layout=Layout(width='400px'), max=40, min=1)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "37b6002d214b4dc4a265555d825d8da7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9666ff43dde4df4b285343edde8ddca",
+       "model_id": "c65d688b1c7a40c4b6a6d94f77036729",
        "version_major": 2,
        "version_minor": 0
       },
@@ -402,7 +198,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8331a869849e449495d4ce1a1b6b07b8",
+       "model_id": "3c31f86b7877493697f8ef89873c5114",
        "version_major": 2,
        "version_minor": 0
       },
@@ -415,8 +211,8 @@
     }
    ],
    "source": [
-    "k = widgets.IntSlider(value=1, min=1, max=5, description='k value:',layout=Layout(width='400px'))\n",
-    "step_size = widgets.IntSlider(value=1, min=1, max=40, description='Step size:',layout=Layout(width='400px'))\n",
+    "k = widgets.IntSlider(value=1, min=1, max=5, layout=Layout(width='400px'))\n",
+    "step_size = widgets.IntSlider(value=1, min=1, max=40,layout=Layout(width='400px'))\n",
     "\n",
     "dfs = df.copy()\n",
     "\n",
@@ -431,7 +227,7 @@
     "\n",
     "    orig_length = len(df)\n",
     "    new_length = len(dfs.groupby(QID).filter(lambda x: len(x)>=k))\n",
-    "    print(\"%d%% of data supressed\" %(np.round(((orig_length - new_length) / orig_length)* 100)))\n",
+    "    print(\"%d%% of data supressed to achieve privacy\" %(np.round(((orig_length - new_length) / orig_length)* 100)))\n",
     "\n",
     "def generalise_supress(k, step_size):\n",
     "    dfs = df.copy()\n",
@@ -442,7 +238,8 @@
     "    QID = ['Age (QID)', 'Gender (QID)']\n",
     "    index = dfs.groupby(QID).filter(lambda x: len(x)<k).index\n",
     "    dfs.iloc[index] = '----------'\n",
-    "    display(dfs)\n",
+    "#     display(dfs)\n",
+    "    display(HTML(dfs.to_html(index=False)))\n",
     "\n",
     "    \n",
     "def label_age(step_size):\n",
@@ -450,16 +247,15 @@
     "    \n",
     "\n",
     "def meassure_k(k, step_size):\n",
+    "    QID = ['Age (QID)', 'Gender (QID)'] # define quasi-identifyer groups\n",
     "    dfs = df.copy()\n",
     "    dfs['ranged'] = np.floor((dfs['Age (QID)']/step_size))*step_size\n",
     "    dfs['ranged'] = dfs['ranged'].astype(int)\n",
     "    gil = GIL(max(dfs['ranged'] + step_size) , min(dfs['ranged']), max(dfs['Age (QID)']), min(dfs['Age (QID)']))\n",
     "    dfs['Age (QID)'] = dfs['ranged'].astype(str) + '-' + (dfs['ranged']+step_size).astype(str)\n",
-    "    \n",
+    "   \n",
     "    dfs = dfs.groupby(QID).filter(lambda x: len(x)>=k)\n",
-    "\n",
-    "    qid = ['Age (QID)', 'Gender (QID)'] # define quasi-identifyer groups\n",
-    "    quid_groupsize = dfs.groupby(qid).size()\n",
+    "    quid_groupsize = dfs.groupby(QID).size()\n",
     "    k_val = quid_groupsize[quid_groupsize > 0].min()\n",
     "    if np.isnan(k_val): k_val = 0\n",
     "    print('k-annonymity has a value of k = %d' %k_val)\n",
@@ -472,11 +268,13 @@
     "out3 = widgets.interactive_output(label_age, {'step_size': step_size})\n",
     "out4 = widgets.interactive_output(meassure_k, {'k': k, 'step_size': step_size})\n",
     "\n",
+    "print('Set minimum privacy value with k-annonymity:')\n",
     "display(k)\n",
     "display(out1)\n",
     "\n",
     "print('\\n')\n",
     "\n",
+    "print('Set age generalisation step size')\n",
     "display(step_size)\n",
     "display(out3)\n",
     "\n",
@@ -485,14 +283,6 @@
     "display(out4)\n",
     "display(out2)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "131157db-bcbc-4337-a5ce-0052b53aebaf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
